Adicionando nome_do_arquivo.ext

--- a/index.html
+++ b/index.html
@@ -3,25 +3,41 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ATO MÉTODOS - Cristofer Leone</title>
-  
-  <!-- Fonte Montserrat como substituto da Galano Classic -->
+  <title>MÉTODO ATO - Formação de Mentores de Sucesso</title>
+
+  <!-- SEO -->
+  <meta name="description" content="O Método ATO é a principal formação de mentores no Brasil, com um formato presencial e imersivo, foco em monetização e suporte pós-formação. Inscreva-se agora!" />
+  <meta name="keywords" content="Método ATO, Cristofer Leone, mentoria, formação de mentores, sucesso, monetização, alta performance, imersão" />
+  <meta name="author" content="Cristofer Leone" />
+
+  <!-- Open Graph (Facebook, LinkedIn, WhatsApp) -->
+  <meta property="og:title" content="Método ATO - A Melhor Formação de Mentores no Brasil" />
+  <meta property="og:description" content="O Método ATO se destaca pela sua imersão presencial, foco em monetização e suporte pós-formação. Transforme seu conhecimento em um negócio lucrativo!" />
+  <meta property="og:image" content="capa.png" />
+  <meta property="og:url" content="https://metodoato.com.br" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Método ATO - A Melhor Formação de Mentores no Brasil" />
+  <meta name="twitter:description" content="O Método ATO se destaca pela sua imersão presencial, foco em monetização e suporte pós-formação. Transforme seu conhecimento em um negócio lucrativo!" />
+  <meta name="twitter:image" content="capa.png" />
+
+  <!-- Favicon AVIF (com fallback para ICO) -->
+  <link rel="icon" href="logo-icon.avif" sizes="192x192">
+  <link rel="icon" href="logo-icon.ico" sizes="16x16">
+
+  <!-- Fonte Montserrat -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-  
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Montserrat', sans-serif;
-      background-color: #051026;
-    }
-  </style>
+
 </head>
 <body>
+  <!-- O conteúdo do React vai ser renderizado aqui -->
   <div id="root"></div>
+
+  <!-- A aplicação React será carregada aqui -->
   <script type="module" src="/src/main.jsx"></script>
-  
 </body>
 </html>
