Adicionando nome_do_arquivo.ext

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MÉTODO ATO - Formação de Mentores de Sucesso</title>
+  <title> Método ATO - Cristofer Leone</title>
 
   <!-- SEO -->
   <meta name="description" content="O Método ATO é a principal formação de mentores no Brasil, com um formato presencial e imersivo, foco em monetização e suporte pós-formação. Inscreva-se agora!" />
