Adicionando build (dist/) ao repositório

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="Método ATO, Cristofer Leone, formação de mentores, mentoria lucrativa, alta performance, mentorias rentáveis, monetização de conhecimento, imersão presencial, mentoria profissional, método comprovado, negócio digital, escalabilidade, mentoria sem investimento em ads" />
   <meta name="author" content="Cristofer Leone" />
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-  <link rel="canonical" href="https://metodoato.com.br/" />
+  <link rel="canonical" href="https://metodoato.com/" />
   
   <!-- Performance -->
   <link rel="preload" href="/src/main.jsx" as="script" />
@@ -20,11 +20,11 @@
   <!-- Open Graph / Facebook / LinkedIn -->
   <meta property="og:title" content="Método ATO: A Formação de Mentores para Resultados no Brasil | Cristofer Leone" />
   <meta property="og:description" content="Transforme seu conhecimento em um negócio de mentoria lucrativo com o Método ATO. Formação imersiva presencial com metodologia comprovada e suporte contínuo para escalabilidade." />
-  <meta property="og:image" content="https://metodoato.com.br/capa.png" />
+  <meta property="og:image" content="https://metodoato.com/capa.png" />
   <meta property="og:image:alt" content="Método ATO - Formação de Mentores com Cristofer Leone" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:url" content="https://metodoato.com.br/" />
+  <meta property="og:url" content="https://metodoato.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Método ATO por Cristofer Leone" />
   <meta property="og:locale" content="pt_BR" />
@@ -45,8 +45,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
   
   <!-- Alternate Languages (se aplicável) -->
-  <link rel="alternate" hreflang="pt-br" href="https://metodoato.com.br/" />
-  <link rel="alternate" hreflang="x-default" href="https://metodoato.com.br/" />
+  <link rel="alternate" hreflang="pt-br" href="https://metodoato.com/" />
+  <link rel="alternate" hreflang="x-default" href="https://metodoato.com/" />
 
   <!-- Estrutura de dados Schema.org - Curso -->
   <script type="application/ld+json">
@@ -58,10 +58,10 @@
     "provider": {
       "@type": "Organization",
       "name": "Cristofer Leone",
-      "url": "https://metodoato.com.br/",
+      "url": "https://metodoato.com/",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://metodoato.com.br/logo.png",
+        "url": "https://metodoato.com/logo.png",
         "width": "512",
         "height": "512"
       }
@@ -69,7 +69,7 @@
     "offers": {
       "@type": "Offer",
       "category": "Formação Profissional",
-      "url": "https://metodoato.com.br/",
+      "url": "https://metodoato.com/",
       "priceCurrency": "BRL",
       "availability": "https://schema.org/LimitedAvailability"
     }
@@ -82,8 +82,8 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "Método ATO",
-    "url": "https://metodoato.com.br/",
-    "logo": "https://metodoato.com.br/logo.png",
+    "url": "https://metodoato.com/",
+    "logo": "https://metodoato.com/logo.png",
     "sameAs": [
       "https://www.instagram.com/cristofer.leone/"
     ],
